feat(06-04): add typed wiki chat orchestration
- Return structured chat results with JSON-schema parsing and fallback normalization
- Limit prompt memory to recent turns while dropping stale context on topic shifts